<resources>
    <string name="app_name">Расписание СГУ</string>
    <string name="load_schedule">Загрузить расписание</string>
    <string name="choose_fac"><u>Выберите факультет</u></string>
    <string name="choose_gr"><u>Выберите группу</u></string>
    <string name="prev_button"><![CDATA[<]]></string>
    <string name="next_button"><![CDATA[>]]></string>
    <string name="znam">З</string>
    <string name="num">Ч</string>
    <string name="lec">лек</string>
    <string name="pr">пр</string>
    <string name="lab">лаб</string>
    <string name="session">Расписание сессии</string>
    <string name="choose_course"><u>Выберите курс</u></string>
    <string name="SGU_schedule">Расписание занятий СГУ</string>
    <string name="btn_load_schedule">Загрузить новое расписание</string>
    <string name="btn_show_schedule">Показать расписание</string>
    <string name="firstName">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="password">Пароль</string>
    <string name="student">Студент</string>
    <string name="teacher">Преподаватель</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="load_own_schedule">Загрузить своё расписание</string>
    <string name="choose_teacher"><u>Выберите преподавателя</u></string>
    <string name="lesson_1">8:20\n9:50</string>
    <string name="lesson_2">10:00\n11:35</string>
    <string name="lesson_3">12:05\n13:40</string>
    <string name="lesson_4">13:50\n15:25</string>
    <string name="lesson_5">15:35\n17:10</string>
    <string name="lesson_6">17:20\n18:40</string>
    <string name="lesson_7">18:45\n20:05</string>
    <string name="lesson_8">20:10\n21:30</string>
    <string name="back">Назад</string>
    <string name="student_schedule">Расписание студента</string>
    <string name="teacher_schedule">Расписание преподавателей</string>
    <string name="teachers_schedule">Преподаватели</string>
    <string name="fav_teachers">Избранные преподаватели</string>
    <string name="enter_name">Введите ФИО преподавателя</string>
    <string name="add_to_favs">Добавить в избранное</string>
    <string name="del_from_favs">Удалить из избранного</string>
    <string name="department">Кафедра</string>
    <string name="logout">Выйти</string>
    <string name="extra_info">Доп. информация</string>
    <string name="my_schedule">Моё расписание</string>
    <string name="faculty">Факультет</string>
    <string name="course">Курс</string>
    <string name="group">Группа</string>
    <string name="subgroups">Подгруппы:</string>
</resources>
