<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPatronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/patronymic"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textVisiblePassword" />

    <Spinner
        android:id="@+id/faculty_spinner"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="50dp" />
    <Spinner
        android:id="@+id/course_spinner"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="50dp" />
    <Spinner
        android:id="@+id/group_spinner"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="50dp" />

    <!-- Группа радио-кнопок -->
    <RadioGroup
        android:id="@+id/radioGroupRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/radioTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher" />
    </RadioGroup>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:src="@drawable/sgu" />
</LinearLayout>
