<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFaculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faculty" />

        <TextView
            android:id="@+id/textViewCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course" />

        <TextView
            android:id="@+id/textViewGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subgroups" />

        <LinearLayout
            android:id="@+id/checkboxContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/load_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/load_schedule" />
    </LinearLayout>

</ScrollView>
