<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/load_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            android:text="@string/choose_fac"
            android:textStyle="bold"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/fac_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            android:text="@string/choose_teacher"
            android:textStyle="bold"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/teacher_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/load_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/load_schedule" />

        <Button
            android:id="@+id/load_own_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/load_own_schedule" />



    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>