<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/load_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Расписание занятий СГУ"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" /> <!-- отступ снизу -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/choose_fac"
            android:textStyle="bold" /> <!-- отступ сверху и снизу -->

        <Spinner
            android:id="@+id/faculty_spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/choose_course"
            android:textStyle="bold" /> <!-- отступ сверху и снизу -->

        <Spinner
            android:id="@+id/course_spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/choose_gr"
            android:textStyle="bold" /> <!-- отступ сверху и снизу -->

        <Spinner
            android:id="@+id/group_spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp" />

        <Button
            android:id="@+id/load_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/load_schedule" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/sgu" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/schedule_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:visibility="gone">

        <TextView
            android:id="@+id/day_of_week_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"/>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_border_full"
                android:gravity="right"
                android:padding="8dp"
                android:text="8:20\n9:50" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fillViewport="true"
                android:background="@drawable/cell_border_with_up"
                android:padding="3dp">
                <TextView
                    android:id="@+id/lesson1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="fill_vertical" />
            </ScrollView>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_border"
                android:gravity="right"
                android:padding="8dp"
                android:text="10:00\n11:35" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fillViewport="true"
                android:background="@drawable/cell_border_no_left"
                android:padding="3dp">
                <TextView
                    android:id="@+id/lesson2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="fill_vertical" />
            </ScrollView>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_border"
                android:gravity="right"
                android:padding="8dp"
                android:text="12:05\n13:40" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fillViewport="true"
                android:background="@drawable/cell_border_no_left"
                android:padding="3dp">
                <TextView
                    android:id="@+id/lesson3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="fill_vertical" />
            </ScrollView>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_border"
                android:gravity="right"
                android:padding="8dp"
                android:text="13:50\n15:25" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fillViewport="true"
                android:background="@drawable/cell_border_no_left"
                android:padding="3dp">
                <TextView
                    android:id="@+id/lesson4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="fill_vertical" />
            </ScrollView>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_border"
                android:gravity="right"
                android:padding="8dp"
                android:text="15:35\n17:10" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fillViewport="true"
                android:background="@drawable/cell_border_no_left"
                android:padding="3dp">
                <TextView
                    android:id="@+id/lesson5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="fill_vertical" />
            </ScrollView>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_border"
                android:gravity="right"
                android:padding="8dp"
                android:text="17:20\n18:40" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fillViewport="true"
                android:background="@drawable/cell_border_no_left"
                android:padding="3dp">
                <TextView
                    android:id="@+id/lesson6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="fill_vertical" />
            </ScrollView>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_border"
                android:gravity="right"
                android:padding="8dp"
                android:text="18:45\n20:05" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fillViewport="true"
                android:background="@drawable/cell_border_no_left"
                android:padding="3dp">
                <TextView
                    android:id="@+id/lesson7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="fill_vertical" />
            </ScrollView>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_border"
                android:gravity="right"
                android:padding="8dp"
                android:text="20:10\n21:30" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fillViewport="true"
                android:background="@drawable/cell_border_no_left"
                android:padding="3dp">
                <TextView
                    android:id="@+id/lesson8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="fill_vertical" />
            </ScrollView>
        </TableRow>

    </TableLayout>


    <LinearLayout
        android:id="@+id/schedule_layout"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/prev_day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/prev_button" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/znam_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/znam" />

        <Button
            android:id="@+id/num_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/num" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next_day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/next_button" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:visibility="gone">


        <Button
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Назад" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_lek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/lec" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_pr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_lab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/load_session_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:visibility="gone">

        <Button
            android:id="@+id/load_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/session" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/session_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TableLayout
                android:id="@+id/session_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </TableRow>


            </TableLayout>

        </ScrollView>

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Назад" />
    </LinearLayout>
</LinearLayout>